2002-1-13  Johan Dahlin  <jdahlin@telia.com>

	* gtk/Makefile.am: Register gtk-types here, so XML.get_widget works.

2002-01-12  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_type_from_object): convert None, int, long,
	float, str and object to GTypes.

	* gtk/gtkmodule.c (init_gtk): only raise a runtime error if we
	can't initialise gtk.

2002-01-11  Matt Wilson  <msw@redhat.com>

	* Makefile.am (EXTRA_DIST): added appwindow.py

	* examples/pygtk-demo/demos/appwindow.py: added demo

	* gtk/gtk.override (_wrap_gtk_toolbar_insert_stock): removed
	debugging code I didn't mean to check in.

	* gobjectmodule.c (pyg_closure_new): use PyTuple_SetItem to build
	the tuple if extra_args isn't one.  It's faster than using
	abstractions and clarifies ownership rules, so we always incref
	extra_args even if we're about to wrap it in a tuple.  Fixes
	crashes when passing callback functions into
	GtkToolbar.{append_item,prepend_item,insert_item,insert_stock,
	append_element}

2002-01-11  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (GtkTreePathArg.normal): added missing newline

	* gtk/gtk.defs (item_factory_path_from_widget): the return here
	should be gconst-gchar*.  The header in gtk is wrong, filed
	#68527 against gtk.

	* gtk/gtk.override (pygtk_item_factory_cb): if the user passed
	data to GtkItemFactory.create_items, call the callable with the
	function data as the first parameter.
	(_wrap_gtk_item_factory_create_items): take an optional
	callback_data argument.  Use PyGtkCustomNotify and
	g_object_weak_ref to free up the reference to the callable and
	data after the item factory is freed.

2002-01-11  James Henstridge  <james@daa.com.au>

	* codegen/h2def.py (find_obj_defs): handle typedef struct { ... }
	style type defs, as used in bonobo.

2002-01-09  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (GtkTreePathArg.freepath): added missing
	newline.

	* gtk/gtk.override (pygtk_tree_foreach_marshal,