@@ -9,7 +9,7 @@ headers
 import gobject.GObject as PyGObject_Type
 import gtk._gtk.Widget as PyGtkWidget_Type
 %%
-ignore_glob *_get_type
+ignore-glob *_get_type
 %%
 ignore
   glade_init
