@@ -1,3 +1,11 @@
+2002-01-14  James Henstridge  <james@daa.com.au>
+
+	* codegen/codegen.py (main): add a --load-types argument that runs
+	a python script before commencing code generation.  The idea is to
+	allow loading of extra argument type handlers.
+
+	* gtk/libglade.override (connect_one): s/ignore_glob/ignore-glob/
+
 2002-1-13  Johan Dahlin  <jdahlin@telia.com>
 
 	* gtk/Makefile.am: Register gtk-types here, so XML.get_widget works.
